--- a/frontend/src/css/components/button.scss
+++ b/frontend/src/css/components/button.scss
@@ -5,6 +5,7 @@
   border-radius: 4px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   outline: none;
+  min-width: 200px;
 
   &:active {
     position: relative;
