--- a/frontend/src/css/views/my-day.scss
+++ b/frontend/src/css/views/my-day.scss
@@ -5,4 +5,12 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .my-day--greeting {
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
