--- a/frontend/src/css/index.scss
+++ b/frontend/src/css/index.scss
@@ -5,6 +5,7 @@
 @import './components/button.scss';
 @import './components/input.scss';
 @import './components/current-date.scss';
+@import './components/sidebar.scss';
 
 @import './views/register.scss';
 @import './views/my-day.scss';
@@ -18,7 +19,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: $charcoal;
+  background-color: $main;
   padding: 30px 0;
   color: #fff;
 }
