--- a/frontend/src/css/index.scss
+++ b/frontend/src/css/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald:400,700&display=swap');
 @import './colors.scss';
 @import './utils.scss';
+@import './layout.scss';
 
 @import './components/button.scss';
 @import './components/input.scss';
