--- a/frontend/src/css/components/sidebar.scss
+++ b/frontend/src/css/components/sidebar.scss
@@ -7,7 +7,13 @@
     flex-direction: column;
     align-items: center;
 
-    a {
+    button {
+      background-color: transparent;
+      border: none;
+      padding: 10px;
+    }
+
+    a, button {
       padding: 20px;
     }
   }
